New colors and ascii art fix

--- a/config.conf
+++ b/config.conf
@@ -524,7 +524,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(3 3 3 3 15 15)
+colors=(4 4 4 4 4 8)
 
 
 # Text Options
@@ -769,7 +769,7 @@ ascii_distro="Arch_small"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(4 4 4 4 4 4)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
