--- a/config.conf
+++ b/config.conf
@@ -32,7 +32,7 @@ print_info() {
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
 
-    #info cols
+    # info cols
 }
 
 # Title
@@ -524,7 +524,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(4 4 4 4 4 8)
+colors=(distro)
 
 
 # Text Options
@@ -758,7 +758,7 @@ image_source="/home/eschillus/.config/neofetch/arch.txt"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="Arch_small"
+# ascii_distro="Arch_small"
 
 # Ascii Colors
 #
@@ -769,7 +769,7 @@ ascii_distro="Arch_small"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(4 4 4 4 4 4)
+ascii_colors=(distro)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
